Adding in some CSS for blurb like conversation bubbles

--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Project website</title>
+    <title>Github projects</title>
     <link rel="shortcut icon" href="img/duckling.png" />
+    <link rel="stylesheet" href="css/theme.css" />
 </head>
 <body>
-    <p>HELLO WORLD!</p>
+    <p class="blurb left">HELLO WORLD!</p>
 </body>
 </html>
