--- a/index.html
+++ b/index.html
@@ -5,18 +5,35 @@
     <title>Github projects</title>
     <link rel="shortcut icon" href="img/duckling.png" />
     <link rel="stylesheet" href="css/theme.css" />
+    <link rel="stylesheet" href="fontawesome/css/all.min.css" />
+    <link rel="stylesheet" href="fontawesome/js/all.min.js" />
 </head>
-<body>
-    <p class="blurb left">HELLO WORLD!</p>
+<body id="browser-screen">
+    <div id="message-box">
+        <div id="message-box-header">
+            <div id="github-name">Joseph Tran</div>
+            <div id="contact-details">
+                <a class="fa fa-envelope" href="mailto:joseph.zq.tran@gmail.com"></a>
+                <a class="fab fa-linkedin" href="https://au.linkedin.com/in/joseph-tran-17a30b4b"></a>
+            </div>
+        </div>
+        <div id="chatbox-wrapper">
+            <div id="chatbox">
+                <div class="blurb">
+                    <div class="bubble me right-bubble">HELLO WORLD!</div>
+                    <div class="bubble me right-bubble">What happened in University?</div>
+                </div>
+                <div class="blurb">
+                    <div class="bubble left-bubble">Well I worked on a few projects at university</div>
+                </div>
+                <div class="blurb">
+                    <div class="bubble me right-bubble">What kind of work have you done?</div>
+                </div>
+            </div>
+        </div>
+    </div>
+    
 </body>
-<script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-    ga('create', 'UA-70003644-4', 'auto');
-    ga('send', 'pageview');
-
-</script>
+<script src='js/initial.js'></script>
+<script src='js/google-code.js'></script>
 </html>
