Dynamically creating a chat
- Cleaned up the profile pictures and readded in the google analytics code

--- a/index.html
+++ b/index.html
@@ -6,34 +6,29 @@
     <link rel="shortcut icon" href="img/duckling.png" />
     <link rel="stylesheet" href="css/theme.css" />
     <link rel="stylesheet" href="fontawesome/css/all.min.css" />
-    <link rel="stylesheet" href="fontawesome/js/all.min.js" />
 </head>
 <body id="browser-screen">
     <div id="message-box">
         <div id="message-box-header">
-            <div id="github-name">Joseph Tran</div>
+            <div id="conversation-profile">
+                <img src="img/profile-picture.png" class="profile-picture" id="main-profile-picture" />
+                <div id="profile-name">Joseph Tran</div>
+            </div>
             <div id="contact-details">
-                <a class="fa fa-envelope" href="mailto:joseph.zq.tran@gmail.com"></a>
-                <a class="fab fa-linkedin" href="https://au.linkedin.com/in/joseph-tran-17a30b4b"></a>
+                <a class="fa fa-lg fa-envelope" href="mailto:joseph.zq.tran@gmail.com" title="Send me an email"></a>
+                <a class="fab fa-lg fa-linkedin" href="https://au.linkedin.com/in/joseph-tran-17a30b4b" title="Go to my Linkedin profile"></a>
+                <a class="fab fa-lg fa-github" href="https://github.com/SquireOfSoftware" title="Go to my Github account"></a>
             </div>
         </div>
         <div id="chatbox-wrapper">
             <div id="chatbox">
-                <div class="blurb">
-                    <div class="bubble me right-bubble">HELLO WORLD!</div>
-                    <div class="bubble me right-bubble">What happened in University?</div>
-                </div>
-                <div class="blurb">
-                    <div class="bubble left-bubble">Well I worked on a few projects at university</div>
-                </div>
-                <div class="blurb">
-                    <div class="bubble me right-bubble">What kind of work have you done?</div>
-                </div>
+                
             </div>
         </div>
     </div>
     
 </body>
+<script src='js/conversation-blob.js'></script>
 <script src='js/initial.js'></script>
 <script src='js/google-code.js'></script>
 </html>
