Shifting code around to make it cleaner
- There should be support for clearer mouseover highlights on chatblocks and contact detail icons

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
                 <div id="profile-name">Joseph Tran</div>
             </div>
             <div id="contact-details">
-                <a class="fa fa-lg fa-envelope" href="mailto:joseph.zq.tran@gmail.com" title="Send me an email"></a>
-                <a class="fab fa-lg fa-linkedin" href="https://au.linkedin.com/in/joseph-tran-17a30b4b" title="Go to my Linkedin profile"></a>
-                <a class="fab fa-lg fa-github" href="https://github.com/SquireOfSoftware" title="Go to my Github account"></a>
+                <a class="fa fa-lg fa-envelope icon" href="mailto:joseph.zq.tran@gmail.com" title="Send me an email"></a>
+                <a class="fab fa-lg fa-linkedin icon" href="https://au.linkedin.com/in/joseph-tran-17a30b4b" title="Go to my Linkedin profile"></a>
+                <a class="fab fa-lg fa-github icon" href="https://github.com/SquireOfSoftware" title="Go to my Github account"></a>
             </div>
         </div>
         <div id="chatbox-wrapper">
