Starting to add a gallery

--- a/index.html
+++ b/index.html
@@ -26,8 +26,26 @@
             </div>
         </div>
     </div>
-    
+    <div id="gallery-overlay">
+        <div id="gallery">
+            <div id="gallery-title-bar">
+                <div id="gallery-title">Gallery</div>
+                <a id="gallery-closure" class="fa fa-lg fa-window-close icon"></a>
+            </div>
+            <div id="main-gallery-focus">
+                <div id="previous-gallery-item"></div>
+                <div id="current-gallery-item"></div>
+                <div id="next-gallery-item"></div>
+            </div>
+            <div id="gallery-listings">
+                <div id="gallery-scroll">
+
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
+<script src='js/gallery.js'></script>
 <script src='js/conversation-blob.js'></script>
 <script src='js/initial.js'></script>
 <script src='js/google-code.js'></script>
