--- a/index.html
+++ b/index.html
@@ -33,9 +33,13 @@
                 <a id="gallery-closure" class="fa fa-lg fa-window-close icon"></a>
             </div>
             <div id="main-gallery-focus">
-                <div id="previous-gallery-item"></div>
+                <div id="previous-gallery-item" class="gallery-navigation">
+                    <span class="fa fa-lg fa-caret-left icon"></span>
+                </div>
                 <div id="current-gallery-item"></div>
-                <div id="next-gallery-item"></div>
+                <div id="next-gallery-item" class="gallery-navigation">
+                    <span class="fa fa-lg fa-caret-right icon"></span>
+                </div>
             </div>
             <div id="gallery-listings">
                 <div id="gallery-scroll">
