--- a/index.html
+++ b/index.html
@@ -36,7 +36,16 @@
                 <div id="previous-gallery-item" class="gallery-navigation">
                     <span class="fa fa-lg fa-caret-left icon"></span>
                 </div>
-                <div id="current-gallery-item"></div>
+                <div id="current-gallery-item">
+                    <div id="current-gallery-picture">
+
+                    </div>
+                    <div id="current-gallery-blurb">
+                        <div id="current-gallery-text">
+
+                        </div>
+                    </div>
+                </div>
                 <div id="next-gallery-item" class="gallery-navigation">
                     <span class="fa fa-lg fa-caret-right icon"></span>
                 </div>
