Adding a bit more text into the chat
- Orion is coming close to being completed fleshed out

--- a/index.html
+++ b/index.html
@@ -37,9 +37,7 @@
                     <span class="fa fa-lg fa-caret-left icon"></span>
                 </div>
                 <div id="current-gallery-item">
-                    <div id="current-gallery-picture">
-
-                    </div>
+                    <img id="current-gallery-picture" src="img/duckling.png">
                     <div id="current-gallery-blurb">
                         <div id="current-gallery-text">
 
